--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     id="languageSelect">
     <button
         style="background-color: #1f1f1f; height: 440px; width: calc(50% - 55px); border-radius: 50px; color: white; font-size: 150px;"
-        onclick="languageClick('en')">🏴</button>
+        onclick="languageClick('en')"><img src="./us-flag.png" style="width:375px"></button>
     <button
         style="background-color: #1f1f1f; height: 440px; width: calc(50% - 55px); border-radius: 50px; color: white; font-size: 150px"
-        onclick="languageClick('fr')">🏁</button>
+        onclick="languageClick('fr')"><img src="./frenchflag.png" style="width: 375px"></button>
 </div>
 
 <input type="text"
